--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+	@model IEnumerable<ProductModel>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -220,50 +221,47 @@
 			<div class="row">
 				<div class="col-sm-3">
 					@Html.Partial("_sideBarPartial")
-				</div>	
+				</div>
 
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
 						<!--features_items-->
 						<h2 class="title text-center">Features Items</h2>
-						<div class="col-sm-4">
-							<div class="product-image-wrapper">
-								<div class="single-products">
-									<div class="productinfo text-center">
-										<img src="images/home/product1.jpg" alt="" />
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-									</div>
-									<div class="product-overlay">
-										<div class="overlay-content">
-											<h2>$56</h2>
-											<p>Easy Polo Black Edition</p>
+						@foreach (var item in Model)
+						{
+							<div class="col-sm-4">
+								<div class="product-image-wrapper">
+									<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="~/images/@item.Image" alt="@item.Name" width="100%" />
+											<h2>@item.Price</h2>
+											<p>@item.Name</p>
 											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
+										<div class="product-overlay">
+											<div class="overlay-content">
+												<h2>@item.Price</h2>
+												<p>@item.Name</p>
+												<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+											</div>
+										</div>
+									</div>
+									<div class="choose">
+										<ul class="nav nav-pills nav-justified">
+											<li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
+											<li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
+										</ul>
 									</div>
 								</div>
-								<div class="choose">
-									<ul class="nav nav-pills nav-justified">
-										<li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-										<li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-									</ul>
-								</div>
 							</div>
-						</div>
-						
-						
-						
-						
-						
-
+						}
 					</div><!--features_items-->
 
-					
+
 
 				</div>
 			</div>
-				@RenderBody()
+			@RenderBody()
 		</div>
 	</section>
 
@@ -436,3 +434,4 @@
 	<script src="~/js/main.js"></script>
 </body>
 </html>
+
