--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Shopping.Models.ViewModels
-@model CartItemModel
+@model CartItemViewModel
 <section id="cart_items">
 	<div class="container">
 		<div class="breadcrumbs">
@@ -23,31 +23,46 @@
 				<tbody>
 					@if (Model.CartItems.Count > 0)
 					{
-					<tr>
-						<td class="cart_product">
-							<a href=""><img src="images/cart/one.png" alt=""></a>
-						</td>
-						<td class="cart_description">
-							<h4><a href="">Colorblock Scuba</a></h4>
-							<p>Web ID: 1089772</p>
-						</td>
-						<td class="cart_price">
-							<p>$59</p>
-						</td>
-						<td class="cart_quantity">
-							<div class="cart_quantity_button">
-								<a class="cart_quantity_up" href=""> + </a>
-								<input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-								<a class="cart_quantity_down" href=""> - </a>
-							</div>
-						</td>
-						<td class="cart_total">
-							<p class="cart_total_price">$59</p>
-						</td>
-						<td class="cart_delete">
-							<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-						</td>
-					</tr>
+						@foreach (var item in Model.CartItems)
+						{
+							<tr>
+								<td class="cart_product">
+									<a href=""><img src="~/images/@item.Image" alt=""></a>
+								</td>
+								<td class="cart_description">
+									<h4><a href="">@item.ProductName</a></h4>
+									<p>Web ID: 1089772</p>
+								</td>
+								<td class="cart_price">
+									<p>$59</p>
+								</td>
+								<td class="cart_quantity">
+									<div class="cart_quantity_button">
+										<a class="btn btn-primary btn-sm" asp-controller="Cart" asp-action="Increase" asp-route-id="@item.ProductId"  > + </a>
+										<input class="cart_quantity_input" type="text" name="quantity" value="@item.Quantity" autocomplete="off" size="2">
+										<a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="Dercrease" asp-route-id="@item.ProductId">  </a>
+										<a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="Remove" asp-route-id="@item.ProductId"> Remove </a>
+									</div>
+								</td>
+								<td class="cart_total">
+									<p class="cart_total_price"> @Model.CartItems.Where(x => x.ProductId == item.ProductId).Sum(x => x.Quantity*x.Price).ToString() </p>
+								</td>
+								<td class="cart_delete">
+									<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+								</td>
+							</tr>
+						}
+						<tr>
+							<td  colspan="6">Grand Toltal: @Model.GrandTotal.ToString()</td>
+</tr>
+					}
+					else
+					{
+						<tr>
+                            <td colspan="5">
+                                <h4>Your cart is empty</h4>
+                            </td>
+						</tr>					
 					}
 				</tbody>
 			</table>
