--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -37,12 +37,12 @@
 									<p>$59</p>
 								</td>
 								<td class="cart_quantity">
-									<div class="cart_quantity_button">
-										<a class="btn btn-primary btn-sm" asp-controller="Cart" asp-action="Increase" asp-route-id="@item.ProductId"  > + </a>
+									
+										<a class="btn btn-default btn-sm" asp-controller="Cart" asp-action="Increase" asp-route-id="@item.ProductId"  > + </a>
 										<input class="cart_quantity_input" type="text" name="quantity" value="@item.Quantity" autocomplete="off" size="2">
-										<a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="Dercrease" asp-route-id="@item.ProductId">  </a>
+										<a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="Dercrease" asp-route-id="@item.ProductId"> - </a>
 										<a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="Remove" asp-route-id="@item.ProductId"> Remove </a>
-									</div>
+									
 								</td>
 								<td class="cart_total">
 									<p class="cart_total_price"> @Model.CartItems.Where(x => x.ProductId == item.ProductId).Sum(x => x.Quantity*x.Price).ToString() </p>
@@ -52,8 +52,8 @@
 								</td>
 							</tr>
 						}
-						<tr>
-							<td  colspan="6">Grand Toltal: @Model.GrandTotal.ToString()</td>
+						<tr rowspan="6">
+							<td colspan="6">Tổng Tiền: <p class="cart_total_price">@Model.GrandTotal.ToString() VNĐ</p></td>
 </tr>
 					}
 					else
