--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -85,37 +85,29 @@
 							{
 								<div class="col-sm-4">
 									<div class="product-image-wrapper">
-											<div class="single-products">
-												<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
-												<div class="productinfo text-center">
-													<img src="~/images/@item.Image" alt="@item.Name" width="100%" />
-													<h2>@item.Price</h2>
-													<p>@item.Name</p>
-													<p>Danh Mục: @item.Category.Name</p>
-													<p>Thương Hiệu: @item.Brand.Name</p>
-													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-												</div>
-											</a>
-												<div class="product-overlay">
-													<div class="overlay-content">
-														<h2>@item.Price</h2>
-														<p>@item.Name</p>
-														<p>Danh Mục: @item.Category.Name</p>
-														<p>Thương Hiệu: @item.Brand.Name</p>
-														<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-													</div>
-												</div>
+										<div class="single-products">
+											<div class="productinfo text-center">
+												<img src="~/images/@item.Image" alt="@item.Name" width="100%" />
+												<h2>@item.Price</h2>
+												<p>@item.Name</p>
+												<p>Danh Mục: @item.Category.Name</p>
+												<p>Thương Hiệu: @item.Brand.Name</p>
+												<a class="btn btn-default add-to-cart" asp-action="Add" asp-controller="Cart" asp-route-id="@item.Id">
+													<i class="fa fa-shopping-cart"></i>Add to cart
+												</a>
 											</div>
-										
+											
+										</div>
 										<div class="choose">
 											<ul class="nav nav-pills nav-justified">
 												<li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
 												<li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
 											</ul>
 										</div>
-									</div>
-								</div>
+									</div> <!-- Đóng .product-image-wrapper -->
+								</div> <!-- Đóng .col-sm-4 -->
 							}
+
 						}
 
 					</div><!--features_items-->
