--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -40,7 +40,7 @@
 									
 										<a class="btn btn-default btn-sm" asp-controller="Cart" asp-action="Increase" asp-route-id="@item.ProductId"  > + </a>
 										<input class="cart_quantity_input" type="text" name="quantity" value="@item.Quantity" autocomplete="off" size="2">
-										<a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="Dercrease" asp-route-id="@item.ProductId"> - </a>
+										<a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="Decrease" asp-route-id="@item.ProductId"> - </a>
 										<a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="Remove" asp-route-id="@item.ProductId"> Remove </a>
 									
 								</td>
@@ -54,6 +54,7 @@
 						}
 						<tr rowspan="6">
 							<td colspan="6">Tổng Tiền: <p class="cart_total_price">@Model.GrandTotal.ToString() VNĐ</p></td>
+							<td><a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="CLear" > Clear </a></td>
 </tr>
 					}
 					else
