--- a/Shopping/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Product Listed";
 }
 <h3>List Product</h3>
-<a asp-action="Add" asp-controller="Product">Add Product</a>
+<a  asp-action="Create" asp-controller="Product">Add Product</a>
 <table class="table">
     <thead>
         <tr>
