--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
     <script src="~/js/main.js"></script>
 	
 
-
+	@await RenderSectionAsync("Scriptss", required: false)
     @RenderSection("Scripts", required: false)
 </body>
 </html>
