--- a/Shopping/Areas/Admin/Views/Product/Create.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Create.cshtml
@@ -4,13 +4,13 @@
 }
 <h4>Create Product</h4>
 <div class=" col-md-9">
-<form asp-action="Create" enctype="multipart/form-data">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label>Name</label>
-        <input asp-for="Name" class="form-control"/>
-        <span asp-validation-for="Name" class="text-danger" />
-    </div>
+    <form asp-action="Create" enctype="multipart/form-data">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label>Name</label>
+            <input asp-for="Name" class="form-control"/>
+            <span asp-validation-for="Name" class="text-danger" />
+        </div>
         <div class="form-group">
             <label>Price</label>
             <input asp-for="Price" class="form-control" />
@@ -37,12 +37,21 @@
         </div>
         <div class="form-group">
             <label>Image</label>
-            <input asp-for="Image" class="form-control" />
-            <span asp-validation-for="Image" class="text-danger" />
+            <input asp-for="ImageUpload" class="form-control" />
+            <span asp-validation-for="ImageUpload" class="text-danger" />
         </div>
         <div class="form-group">
             <button class="btn btn-primary">Create</button>
         </div>
-</form>
-<a asp-action="Index">Back to list product</a>
+    </form>
+    <a asp-action="Index">Back to list product</a>
 </div>
+@section Scriptss {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
+    <script>
+        CKEDITOR.replace( 'Description' );
+    </script>
+}
