--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -34,7 +34,7 @@
 									<p>Web ID: 1089772</p>
 								</td>
 								<td class="cart_price">
-									<p>$59</p>
+									<p>@item.Price</p>
 								</td>
 								<td class="cart_quantity">
 									
