--- a/Shopping/Views/Category/Index.cshtml
+++ b/Shopping/Views/Category/Index.cshtml
@@ -74,6 +74,12 @@
 				<div class="col-sm-3">
 					@Html.Partial("_sideBarPartial")
 				</div>
+				<style>
+					.product-image-wrapper {
+						height: 450px;
+					}
+
+				</style>
 
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
@@ -88,7 +94,7 @@
 										<div class="single-products">
 											<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
 												<div class="productinfo text-center">
-													<img src="~/images/@item.Image" alt="@item.Name" width="100%" />
+													<img src="~/media/product/@item.Image" alt="@item.Name" width="100%" />
 													<h2>@item.Price</h2>
 													<p>@item.Name</p>
 													<p>Danh Mục: @item.Category.Name</p>
