--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 		<!--slider-->
 		<div class="container">
 			<div class="row">
-                
+
 				<div class="col-sm-12">
 					<div id="slider-carousel" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators">
@@ -14,7 +14,7 @@
 							<li data-target="#slider-carousel" data-slide-to="1"></li>
 							<li data-target="#slider-carousel" data-slide-to="2"></li>
 						</ol>
-						
+
 						<div class="carousel-inner">
 							<div class="item active">
 								<div class="col-sm-6">
@@ -75,6 +75,12 @@
 				<div class="col-sm-3">
 					@Html.Partial("_sideBarPartial")
 				</div>
+				<style>
+					.product-image-wrapper {
+						height: 450px;
+					}
+
+				</style>
 
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
@@ -86,18 +92,20 @@
 							{
 								<div class="col-sm-4">
 									<div class="product-image-wrapper">
+
 										<div class="single-products">
+
 											<div class="productinfo text-center">
-												<img src="~/images/@item.Image" alt="@item.Name" width="100%" />
-												<h2>@item.Price</h2>
-												<p>@item.Name</p>
-												<p>Danh Mục: @item.Category.Name</p>
-												<p>Thương Hiệu: @item.Brand.Name</p>
-												<a class="btn btn-default add-to-cart" asp-action="Add" asp-controller="Cart" asp-route-id="@item.Id">
-													<i class="fa fa-shopping-cart"></i>Add to cart
+												<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
+													<img src="~/media/products/@item.Image" alt="@item.Name" width="100%" />
+													<h2>@item.Price</h2>
+													<p>@item.Name</p>
+													<p>Danh Mục: @item.Category.Name</p>
+													<p>Thương Hiệu: @item.Brand.Name</p>
 												</a>
+												<a class="btn btn-default add-to-cart" asp-action="Add" asp-controller="Cart" asp-route-id="@item.Id"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 											</div>
-											
+
 										</div>
 										<div class="choose">
 											<ul class="nav nav-pills nav-justified">
