--- a/Shopping/Areas/Admin/Views/Category/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Category/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Category Listed";
 }
 <h3>List Category</h3>
-<a asp-action="Create" asp-controller="Product">Add Product</a>
+<a asp-action="Create" asp-controller="Category">Add Category</a>
 <table class="table">
     <thead>
         <tr>
