--- a/Shopping/Areas/Admin/Views/Category/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Category/Index.cshtml
@@ -10,10 +10,10 @@
             <th scope="col">#</th>
             <th scope="col">Category Name</th>
             <th scope="col">Category Description</th>
-         
-            <th scope="col">Product Slug</th>
+
+            <th scope="col">Category Slug</th>
             <th scope="col">Category Status</th>
-           
+
 
         </tr>
     </thead>
@@ -23,9 +23,21 @@
             <tr>
                 <th scope="row">@item.Id</th>
                 <td>@item.Name</td>
-                <td>@item.Description</td>
-               
+                <td>@Html.Raw(@item.Description)</td>
+
                 <td>@item.Slug</td>
+                <td>
+                    if (@item.Status ==1)
+                    {
+                        <span class="text text-success">Hiển thị</span>
+
+                    }
+
+                    else
+                    {
+                        <span class="text text-danger">Ẩn</span>
+                    }
+                </td>
                
                 <td>
                     <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Category" asp-route-id="@item.Id">Edit</a>
