--- a/Shopping/Areas/Admin/Views/Category/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Category/Index.cshtml
@@ -41,7 +41,7 @@
                
                 <td>
                     <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Category" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-controller="Category" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Category" asp-route-id="@item.Id">Delete</a>
 
 
                 </td>
