trang 404 not foung

--- a/Shopping/Areas/Admin/Views/Brand/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Brand/Index.cshtml
@@ -27,7 +27,7 @@
 
                 <td>@item.Slug</td>
                 <td>
-                    @if(item.Status== "1")
+                    @if(@item.Status== "1")
                     {
                     <span class="text text-success">Hiển thị</span>
                     }
