--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     <!-- Stylesheets -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
     <link href="~/css/prettyPhoto.css" rel="stylesheet">
     <link href="~/css/price-range.css" rel="stylesheet">
     <link href="~/css/animate.css" rel="stylesheet">
