--- a/Shopping/Views/Account/Create.cshtml
+++ b/Shopping/Views/Account/Create.cshtml
@@ -2,7 +2,7 @@
 @{
 	ViewData["Title"] = "Create";
 }
-<section id="form">
+<section id="">
 	<!--form-->
 	<div class="container">
 		<div class="row">
