--- a/Shopping/Views/Account/Index.cshtml
+++ b/Shopping/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginViewModel
+﻿@model UserModel
 @{
     ViewData["Title"] = "Login";
 }
@@ -37,4 +37,3 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
