--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -58,7 +58,7 @@
 							<td><a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="CLear" > Clear </a></td>
 							@if (User.Identity?.IsAuthenticated ?? false)
 							{
-								<td><a class="btn btn-primary btn-sm" asp-controller="Checkout" asp-action="CLear"> CheckOut </a></td>
+								<td><a class="btn btn-primary btn-sm" asp-controller="Checkout" asp-action="CheckOut"> CheckOut </a></td>
 							}
 						
 </tr>
