--- a/Shopping/Areas/Admin/Views/Role/Create.cshtml
+++ b/Shopping/Areas/Admin/Views/Role/Create.cshtml
@@ -2,34 +2,31 @@
 @model IdentityRole
 
 @{
-    ViewData["Title"] = "Create Role";
+    ViewData["title"] = "Create Role";
 }
+
 
 <h3>Create Role</h3>
 
 <div class="col-md-9">
-    <form asp-action="Create" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <form asp-action="Create" enctype="multipart/form-data">
 
+
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label>Name</label>
-            <input asp-for="Name" class="form-control" required />
+            <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
-        <div class="form-group mt-3">
-            <button type="submit" class="btn btn-primary">
-                <i class="fas fa-save"></i> Create
-            </button>
-            <a asp-action="Index" class="btn btn-secondary">
-                <i class="fas fa-arrow-left"></i> Back to list
-            </a>
+        <div class="form-group">
+            <button class="btn btn-primary">Create</button>
         </div>
+
+
     </form>
+    <a asp-action="Index">Back to list Role</a>
 </div>
-
-
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
