--- a/Shopping/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Edit.cshtml
@@ -47,7 +47,7 @@
     </form>
     <a asp-action="Index">Back to list product</a>
 </div>
-@section Scriptss {
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
