loc du lieu va cap nhat ajax

--- a/Shopping/Areas/Admin/Views/User/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/User/Index.cshtml
@@ -14,7 +14,7 @@
 
     <a class="btn btn-primary" asp-action="Create" asp-controller="User">Add User</a>
     <div class="table table-responsive">
-        <table class="table table-responsive" id="myTable">
+        <table class="table table-responsive" id="myTable" id="myTable">
         <thead>
             <tr>
                 <th>Id</th>
