--- a/Shopping/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <h3>List Product</h3>
 <a  asp-action="Create" asp-controller="Product">Add Product</a>
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">#</th>
