san pham lien quen

--- a/Shopping/Views/Product/Details.cshtml
+++ b/Shopping/Views/Product/Details.cshtml
@@ -28,7 +28,7 @@
 			<!--product-details-->
 			<div class="col-sm-5">
 				<div class="view-product">
-					<img src="~/media/products/@Model.Name" alt="@Model.Name" />
+					<img src="~/media/products/@Model.Image" alt="@Model.Name" />
 					<h3>ZOOM</h3>
 				</div>
 				<div id="similar-product" class="carousel slide" data-ride="carousel">
@@ -58,9 +58,9 @@
 					
 					<h2>@Model.Name</h2>
 					<p>Web ID: 1089772</p>
-					<img src="~/media/products/@Model.Name" alt="@Model.Name" />
+					<img src="~/media/products/@Model.Image" alt="@Model.Name" />
 					<span>
-						<span>VNĐ Đ @Model.Price</span>
+						<h2>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", Model.Price)</h2>
 						<label>Quantity: 1</label>
 						<input type="text" value="3" />
 						<button type="button" class="btn btn-fefault cart">
@@ -172,7 +172,46 @@
 
 		<div class="recommended_items">
 			<!--recommended_items-->
-			<h2 class="title text-center">recommended items</h2>
+			<h2 class="title text-center">Related Products</h2>
+			<div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+
+					<div class="item active">
+						@foreach (var relatedProduct in @ViewBag.RelatedProducts as IEnumerable<ProductModel>)
+						{
+							<div class="col-sm-4">
+								<div class="product-image-wrapper">
+									<div class="single-products">
+
+
+										<div class="productinfo text-center">
+											<a asp-action="Detail" asp-controller="Product" asp-route-Id="@relatedProduct.Id">
+												<img src="~/media/products/@relatedProduct.Image" alt="@relatedProduct.Name" width="100px" height="200px" />
+												<h2>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", relatedProduct.Price)</h2>
+												<p>@relatedProduct.Name</p>
+												<p>Danh mục: @relatedProduct.Category.Name</p>
+												<p>Thương hiệu: @relatedProduct.Brand.Name</p>
+											</a>
+
+										</div>
+
+
+									</div>
+
+								</div>
+							</div>
+						}
+
+					</div>
+
+				</div>
+				<a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
+					<i class="fa fa-angle-left"></i>
+				</a>
+				<a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
+					<i class="fa fa-angle-right"></i>
+				</a>
+			</div>
 
 			
 		</div><!--/recommended_items-->
