--- a/Shopping/Areas/Admin/Views/Brand/Create.cshtml
+++ b/Shopping/Areas/Admin/Views/Brand/Create.cshtml
@@ -32,7 +32,7 @@
     </form>
     <a asp-action="Index">Back to list Brands</a>
 </div>
-@section Scriptss {
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
