--- a/Shopping/Areas/Admin/Views/Role/Create.cshtml
+++ b/Shopping/Areas/Admin/Views/Role/Create.cshtml
@@ -2,35 +2,34 @@
 @model IdentityRole
 
 @{
-    ViewData["title"] = "Create Role";
+    ViewData["Title"] = "Create Role";
 }
 
+<h3 class="mb-4"><i class="fas fa-user-shield"></i> Create Role</h3>
 
-<h3>Create Role</h3>
+<div class="col-md-8">
+    <form asp-action="Create" method="post">
+        <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
 
-<div class="col-md-9">
-    <form asp-action="Create" enctype="multipart/form-data">
-
-
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label>Name</label>
-            <input asp-for="Name" class="form-control" />
+            <label asp-for="Name" class="form-label"><i class="fas fa-tag"></i> Role Name</label>
+            <input asp-for="Name" class="form-control" placeholder="Enter role name" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
-        <div class="form-group">
-            <button class="btn btn-primary">Create</button>
+        <div class="form-group mt-3">
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-plus-circle"></i> Create
+            </button>
+            <a asp-action="Index" class="btn btn-secondary">
+                <i class="fas fa-list"></i> Back to List
+            </a>
         </div>
-
-
     </form>
-    <a asp-action="Index">Back to list Role</a>
 </div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
-
