--- a/Shopping/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<ProductModel>
 @{
-    ViewData["Title"] = "Product Listed";
+    ViewData["title"] = "List Product";
 }
+
 <!DOCTYPE html>
 
 <html>
@@ -9,45 +10,60 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 </head>
+<body>
+    <h3>List Products</h3>
 
-<h3>List Product</h3>
-<a  asp-action="Create" asp-controller="Product">Add Product</a>
-<table class="table" id="myTable">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Product Name</th>
-            <th scope="col">Product Description</th>
-            <th scope="col">Product Price</th>
-            <th scope="col">Product Image</th>
-            <th scope="col">Product Slug</th>
-            <th scope="col">Product Category</th>
-            <th scope="col">Product Brand</th>
-            <th scope="col">Product Manage</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <a class="btn btn-primary" asp-action="Create" asp-controller="Product">Add Product</a>
+    <table class="table" id="myTable">
+        <thead>
             <tr>
-                <th scope="row">@item.Id</th>
-                <td>@item.Name</td>
-                <td>@item.Description</td>
-                <td>@item.Price</td>
-                <td><img src="~/media/products/@item.Image" width="120"></td>
-                <td>@item.Slug</td>
-                <td>@item.Category.Name</td>
-                <td>@item.Brand.Name</td>
-                <td>
-                    <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Product" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Product" asp-route-id="@item.Id">Delete</a>
-
-
-                </td>
+                <th>Id</th>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Sold out</th>
+                <th>Product Quantity</th>
+                <th>Product Description</th>
+                <th>Product Price</th>
+                <th>Product Image</th>
+                <th>Product Slug</th>
+                <th>Product Category</th>
+                <th>Product Brand</th>
+                <th>Action</th>
             </tr>
-        }
-    
-        
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>
+                        @if (@item.Quantity == 0)
+                        {
+                            <span class="text text-danger"><b> @item.Quantity</b></span>
+                        }
+                        else
+                        {
+                            <span class="text text-primary"> @item.Quantity</span>
+                        }
+
+                    </td>
+                    <td>@item.SoldOut</td>
+                    <td><a asp-action="CreateProductQuantity" asp-controller="Product" asp-route-Id="@item.Id">Add Quantity</a></td>
+                    <td>@Html.Raw(@item.Description)</td>
+                    <td>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", item.Price)</td>
+                    <td> <img src="~/media/products/@item.Image" width="120px" height="150px" /> </td>
+                    <td> @item.Slug </td>
+                    <td> @item.Category.Name </td>
+                    <td> @item.Brand.Name </td>
+                    <td>
+                        <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Product" asp-route-Id="@item.Id">Edit</a>
+                        <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Product" asp-route-Id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</body>
+
+</html>
