--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -1,111 +1,104 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-	@model IEnumerable<ProductModel>
-<partial name="_SliderPartial" />
-
-
+﻿@model IEnumerable<ProductModel>
+@{
+	ViewData["Title"] = "Web bán hàng ASP.NET8";
 	
+}
+<partial name="_SliderPartial" />
+<div class="col-sm-3">
+	<partial name="_SidebarPartial" />
+</div>
 
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3">
-					@Html.Partial("_sideBarPartial")
-				</div>
-				<style>
-					.product-image-wrapper {
-						height: 450px;
-					}
+<div class="col-sm-9 padding-right">
+	<div class="features_items">
+		<!--features_items-->
+		<h2 class="title text-center">Features Items</h2>
 
-				</style>
+		@foreach (var item in Model)
+		{
 
-				<div class="col-sm-9 padding-right">
-					<div class="features_items">
-						<!--features_items-->
-						<h2 class="title text-center">Features Items</h2>
-						@if (Model != null)
-						{
-							@foreach (var item in Model)
+			<div class="col-sm-4">
+				<div class="product-image-wrapper">
+					<div class="single-products">
+
+
+						<div class="productinfo text-center">
+							<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
+								<img src="~/media/products/@item.Image" alt="@item.Name" width="100px" height="200px" />
+								<h2>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", item.Price)</h2>
+								<p>@item.Name</p>
+								<p>Danh mục: @item.Category.Name</p>
+								<p>Thương hiệu: @item.Brand.Name</p>
+							</a>
+							@* <a asp-action="Add" asp-controller="Cart" asp-route-Id="@item.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a> *@
+							@if (@item.Quantity == 0)
 							{
-								<div class="col-sm-4">
-									<div class="product-image-wrapper">
-
-										<div class="single-products">
-
-											<div class="productinfo text-center">
-												<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
-													<img src="~/media/products/@item.Image" alt="@item.Name" width="100%" />
-													<h2>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", item.Price)</h2>
-													<p>@item.Name</p>
-													<p>Danh Mục: @item.Category.Name</p>
-													<p>Thương Hiệu: @item.Brand.Name</p>
-												</a>
-												<button class="btn btn-default add-to-cart" data-product_id="@item.Id"><i class="fa fa-shopping-cart"></i>Thêm giỏ hàng</button>
-											</div>
-
-										</div>
-										<div class="choose">
-											<ul class="nav nav-pills nav-justified">
-											<li><button class="fa fa-plus-square add-btn-wishlist" data-product_id="@item.Id">Yêu Thích</button></li>
-											<li><button class="fa fa-plus-square add-btn-compare" data-product_id="@item.Id">So Sánh</button></li>
-											</ul>
-										</div>
-									</div> <!-- Đóng .product-image-wrapper -->
-								</div> <!-- Đóng .col-sm-4 -->
+								<button type="button" class="btn btn-default"><i class="fa fa-shopping-cart"></i>Hết hàng</button>
+							}
+							else
+							{
+								<button class="btn btn-default add-to-cart" data-product_id="@item.Id"><i class="fa fa-shopping-cart"></i>Thêm giỏ hàng</button>
 							}
 
+
+						</div>
+
+
+					</div>
+					<div class="choose">
+						@if (User.Identity?.IsAuthenticated ?? false)
+						{
+							<ul class="nav nav-pills nav-justified">
+								<li><button class="btn btn-danger add-btn-wishlist" data-product_id="@item.Id">Yêu thích</button></li>
+								<li><button class="btn btn-primary add-btn-compare" data-product_id="@item.Id">So sánh</button></li>
+							</ul>
 						}
-
-					</div><!--features_items-->
-
-
-
+					</div>
 				</div>
 			</div>
+		}
 
-		</div>
-	</section>
-
-</html>
+	</div><!--features_items-->
+</div>
 @section Scripts {
 	<script>
-		
-			$('.add-to-cart').click(function () {
-				var Id = $(this).data("product_id");
 
-				// alert(product_id);
+		$('.add-to-cart').click(function () {
+			var Id = $(this).data("product_id");
 
-				$.ajax({
-					type: "POST",
-					url: "@Url.Action("Add","Cart")",
-					data: { Id: Id }, // Send data to the server
-					success: function (result) {
-					
-						if (result) {
+			//alert(product_id);
 
-							Swal.fire("Thêm giỏ hàng thành công.");
-						} 
+			$.ajax({
+				type: "POST",
+				url: "@Url.Action("Add", "Cart")",
+				data: { Id: Id }, // Send data to the server
+
+				success: function (result) {
+					// Handle successful update
+					if (result) {
+
+						Swal.fire("Thêm giỏ hàng thành công.");
 					}
+				}
 
-				});
 			});
-		
+		});
+
 	</script>
-	
+	<!---Add to Wishlish Script--->
 	<script>
 		$(document).ready(function () {
 			$('.add-btn-wishlist').click(function () {
 				var Id = $(this).data("product_id");
 
-				// alert(product_id);
+				//alert(product_id);
 
 				$.ajax({
 					type: "POST",
 					url: "@Url.Action("AddWishlist", "Home")",
-					data: { Id: Id }, 
+					data: { Id: Id }, // Send data to the server
 
 					success: function (result) {
-						
+						// Handle successful update
 						if (result) {
 
 							Swal.fire("Thêm yêu thích sản phẩm thành công.");
@@ -116,21 +109,22 @@
 			});
 		});
 	</script>
-
+	<!---//Add to Wishlish Script--->
+	<!---Add to Wishlish Script--->
 	<script>
 		$(document).ready(function () {
 			$('.add-btn-compare').click(function () {
 				var Id = $(this).data("product_id");
 
-				// alert(product_id);
+				//alert(product_id);
 
 				$.ajax({
 					type: "POST",
 					url: "@Url.Action("AddCompare", "Home")",
-					data: { Id: Id }, 
+					data: { Id: Id }, // Send data to the server
 
 					success: function (result) {
-					
+						// Handle successful update
 						if (result) {
 
 							Swal.fire("Thêm sao sánh thành công.");
@@ -141,4 +135,6 @@
 			});
 		});
 	</script>
-	}
+	<!---//Add to Wishlish Script--->
+}
+
