--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
 								<li><a asp-action="Index" asp-controller="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 
 
-								<li><a asp-action="Index" asp-controller="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+								
 
 								@if (User.Identity?.IsAuthenticated ?? false)
 								{
@@ -107,17 +107,14 @@
 									<li><a asp-action="History" asp-controller="Account"><i class="fa fa-user"></i> Account</a></li>
 									<li><a asp-action="Wishlist" asp-controller="Home"><i class="fa fa-heart"></i> Wishlist</a></li>
 									<li><a asp-action="Compare" asp-controller="Home"><i class="fa fa-star"></i> Compare</a></li>
-									<li><a asp-controller="Dashboard" asp-action="Index" asp-area="Admin"><i class="fa fa-lock"></i>Admin CMS</a></li>
+									<li><a asp-controller="Product" asp-action="Index" asp-area="Admin"><i class="fa fa-lock"></i>Admin CMS</a></li>
 									<li><a asp-controller="Realtime" asp-action="Index"><i class="fa fa-comment"></i>Chat</a></li>
 									<li><a asp-controller="Account" asp-action="Logout"><i class="fa fa-lock"></i>Hi @User.Identity.Name Logout </a></li>
 								} else
 								{
 									<li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i>Login</a></li>
 								}
-								else
-								{
-									<li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i>Login</a></li>
-								}
+							
 
 
 							</ul>
@@ -142,11 +139,11 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-<<<<<<< HEAD
+
 								<li><a asp-action="index" asp-controller="Home" class="active">Home</a></li>
-=======
+
 								<li><a asp-controller="home" asp-action="Index" class="active">Home</a></li>
->>>>>>> hung
+
 								<li class="dropdown">
 									<a href="#">Shop<i class="fa fa-angle-down"></i></a>
 
