Api thanh pho va tinh phi ship

--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
 							<li><a asp-controller="Home" class="active">Home</a></li>
 							<li><a asp-controller="Slider">Slider</a></li>
 							<li><a asp-controller="Product">Products</a></li>
+							<li><a asp-controller="Shipping">Shipping</a></li>
 							<li><a asp-controller="Category">Categories</a></li>
 							<li><a asp-controller="Brand">Brands</a></li>
 							<li><a asp-controller="Order" asp-action="Index">Orders</a></li>
