--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -55,15 +55,16 @@
 					<div class="mainmenu pull-left">
 						<ul class="nav navbar-nav collapse navbar-collapse">
 							<li><a asp-controller="Home" class="active">Home</a></li>
-							<li><a asp-controller="Slider">Slider</a></li>
+							<li><a asp-controller="Slider">Sliders</a></li>
 							<li><a asp-controller="Product">Products</a></li>
-							<li><a asp-controller="Shipping">Shipping</a></li>
+							<li><a asp-controller="Shipping">Shippings</a></li>
+							<li><a asp-controller="Coupon">Coupons</a></li>
 							<li><a asp-controller="Category">Categories</a></li>
 							<li><a asp-controller="Brand">Brands</a></li>
 							<li><a asp-controller="Order" asp-action="Index">Orders</a></li>
 							<li><a asp-controller="User" asp-action="Index">Users</a></li>
 							<li><a asp-controller="Role">Role</a></li>
-							<li><a asp-action="Index" asp-controller="Contact"> Contacts</a></li>
+							<li><a asp-action="Index" asp-controller="Contact"> Contact</a></li>
 
 
 						</ul>
