--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<ProductModel>
+﻿
+@model IEnumerable<ProductModel>
 @{
 	ViewData["Title"] = "Web bán hàng ASP.NET8";
-	
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <partial name="_SliderPartial" />
 <div class="col-sm-3">
@@ -9,13 +10,10 @@
 </div>
 
 <div class="col-sm-9 padding-right">
-	
-		
-	
 	<div class="features_items">
 		<!--features_items-->
 		<h2 class="title text-center">Features Items</h2>
-		<partial name="_FilterProducts" />
+
 		@foreach (var item in Model)
 		{
 
@@ -25,14 +23,14 @@
 
 
 						<div class="productinfo text-center">
-							<a asp-action="Details" asp-controller="Product" asp-route-Id="@item.Id">
+							<a asp-action="Detail" asp-controller="Product" asp-route-Id="@item.Id">
 								<img src="~/media/products/@item.Image" alt="@item.Name" width="100px" height="200px" />
 								<h2>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", item.Price)</h2>
 								<p>@item.Name</p>
 								<p>Danh mục: @item.Category.Name</p>
 								<p>Thương hiệu: @item.Brand.Name</p>
 							</a>
-							@* <a asp-action="Add" asp-controller="Cart" asp-route-Id="@item.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a> *@
+							
 							@if (@item.Quantity == 0)
 							{
 								<button type="button" class="btn btn-default"><i class="fa fa-shopping-cart"></i>Hết hàng</button>
@@ -139,20 +137,5 @@
 		});
 	</script>
 	<!---//Add to Wishlish Script--->
-	<script type="text/javascript">
-		$(document).ready(function () {
-
-			$('#sort_by').on('change', function () {
-
-				var url = $(this).val();
-				// alert(url);
-				if (url) {
-					window.location = url;
-				}
-				return false;
-			});
-
-		});
-	</script>
 }
 
