--- a/Shopping/Views/Account/Login.cshtml
+++ b/Shopping/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary btn-block mt-3">Login</button>
                         <p class="text-center mt-2">
-                            <a href="#">Forgot password?</a> |
+                            <a asp-action="ForgetPass" asp-controller="Account">Forgot password?</a> |
                             <a asp-action="Create" asp-controller="Account">Sign up</a>
                         </p>
                     </form>
