--- a/Shopping/Views/Account/Login.cshtml
+++ b/Shopping/Views/Account/Login.cshtml
@@ -25,6 +25,7 @@
                         <p class="text-center mt-2">
                             <a asp-action="ForgetPass" asp-controller="Account">Forgot password?</a> |
                             <a asp-action="Create" asp-controller="Account">Sign up</a>
+                            <a asp-action="LoginByGoogle" asp-controller="Account">Login Google</a><br />
                         </p>
                     </form>
                 </div>
