--- a/Shopping/Views/Account/History.cshtml
+++ b/Shopping/Views/Account/History.cshtml
@@ -46,6 +46,10 @@
                         {
                             <span class="text text-success">Đã giao hàng</span>
                         }
+                        else if (item.Status == 0)
+                        {
+                            <span class="text text-success">Đã Xử Lý</span>
+                        }
                         else
                         {
 
