--- a/Shopping/Areas/Admin/Views/Product/Create.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Create.cshtml
@@ -20,10 +20,14 @@
         <div class="form-group">
             <label>Price</label>
             <input asp-for="Price" pattern="[0-9.,]+" class="form-control typing-price" />
-
             <span id="price-convert"></span>
-
             <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label>CapitalPrice</label>
+            <input asp-for="CapitalPrice" pattern="[0-9.,]+" class="form-control typing-price" />
+            <span id="price-convert"></span>
+            <span asp-validation-for="CapitalPrice" class="text-danger"></span>
         </div>
 
         <div class="form-group">
