--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -54,17 +54,18 @@
 					</div>
 					<div class="mainmenu pull-left">
 						<ul class="nav navbar-nav collapse navbar-collapse">
-							<li><a asp-controller="Home" class="active">Home</a></li>
-							<li><a asp-controller="Slider">Sliders</a></li>
-							<li><a asp-controller="Product">Products</a></li>
-							<li><a asp-controller="Shipping">Shippings</a></li>
-							<li><a asp-controller="Coupon">Coupons</a></li>
-							<li><a asp-controller="Category">Categories</a></li>
-							<li><a asp-controller="Brand">Brands</a></li>
-							<li><a asp-controller="Order" asp-action="Index">Orders</a></li>
-							<li><a asp-controller="User" asp-action="Index">Users</a></li>
-							<li><a asp-controller="Role">Role</a></li>
-							<li><a asp-action="Index" asp-controller="Contact"> Contact</a></li>
+							<li><a asp-action="Index" asp-controller="Home">Homepage</a></li>
+							<li><a asp-action="Index" asp-controller="Dashboard" class="active">Dashboard</a></li>
+							<li><a asp-action="Index" asp-controller="Slider"> Sliders</a></li>
+							<li><a asp-action="Index" asp-controller="Product"> Products</a></li>
+							<li><a asp-action="Index" asp-controller="Shipping"> Shippings</a></li>
+							<li><a asp-action="Index" asp-controller="Contact"> Contacts</a></li>
+							<li><a asp-action="Index" asp-controller="Category"> Categories</a></li>
+							<li><a asp-action="Index" asp-controller="Brand"> Brands</a></li>
+							<li><a asp-action="Index" asp-controller="User"> Users</a></li>
+							<li><a asp-action="Index" asp-controller="Role"> Roles</a></li>
+							<li><a asp-action="Index" asp-controller="Order"> Orders</a></li>
+							<li><a asp-action="Index" asp-controller="Coupon"> Coupon</a></li>
 
 
 						</ul>
@@ -115,6 +116,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 	<script src="https://cdn.datatables.net/buttons/3.1.1/js/buttons.html5.min.js"></script>
 	<script src="https://cdn.datatables.net/buttons/3.1.1/js/buttons.print.min.js"></script>
+
 
 
 	<script src="~/js/main.js"></script>
