thanh toan momo

--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 					</div>
 					<div class="mainmenu pull-left">
 						<ul class="nav navbar-nav collapse navbar-collapse">
-							<li><a asp-action="Index" asp-controller="Home">Homepage</a></li>
+							<li><a asp-action="Index" asp-controller="Home" asp-area="">Homepage</a></li>
 							<li><a asp-action="Index" asp-controller="Dashboard" class="active">Dashboard</a></li>
 							<li><a asp-action="Index" asp-controller="Slider"> Sliders</a></li>
 							<li><a asp-action="Index" asp-controller="Product"> Products</a></li>
